<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:background="@drawable/old_paper_background"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/design_default_color_surface"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    card_view:cardElevation="1dp"
    card_view:cardMaxElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="424dp"
        android:layout_height="551dp"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/contentIcon"
            android:layout_width="46dp"
            android:layout_height="54dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_agyat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.748"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/shareContent"
            android:layout_width="43dp"
            android:layout_height="44dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="56dp"
            android:background="@null"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/copyContent"
            app:layout_constraintTop_toTopOf="@+id/copyContent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_share"
            tools:ignore="NotSibling,VectorDrawableCompat" />

        <CheckBox
            android:id="@+id/addToFavorite"
            android:layout_width="30dp"
            android:layout_height="49dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"

            android:layout_marginTop="37dp"
            android:layout_marginBottom="95dp"
            android:button="@drawable/customdrawablecheckbox"
            android:checked="false"
            android:text="@string/space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shareContent"
            app:layout_constraintStart_toEndOf="@+id/copyContent"
            app:layout_constraintTop_toBottomOf="@+id/SongScroller" />

        <ImageButton
            android:id="@+id/copyContent"
            android:layout_width="54dp"
            android:layout_height="42dp"
            android:layout_marginStart="212dp"
            android:layout_marginLeft="212dp"
            android:layout_marginBottom="56dp"
            android:background="@null"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_content_copy"
            tools:ignore="MissingConstraints,VectorDrawableCompat" />

        <ScrollView
            android:id="@+id/SongScroller"
            android:layout_width="340dp"
            android:layout_height="399dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/copyContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentIcon"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/SongView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|clip_vertical"
                android:scrollbars="vertical"
                android:text="@string/abtMe"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar3"
                tools:textStyle="bold" />
            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="vertical" />-->
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
